Fixed sidebar visibility issue

--- a/src/Assets/style.css
+++ b/src/Assets/style.css
@@ -47,13 +47,12 @@ p {
 }
 
 .planet-scene {
-  width: 45vw;
-  height: 100vh;
+  flex-grow: 1;
   position: relative;
 }
 
 .planet-sidebar {
-  flex: 1;
+  flex-grow: 1;
   padding: 20px;
   background: #222;
   color: white;
@@ -74,6 +73,7 @@ p {
   top: 30%;
   right: 0;
   width: 50px;
+  cursor: pointer;
 
   .arrow-icon {
     max-width: 100%;
@@ -86,9 +86,6 @@ p {
 }
 
 .information-box {
-  position: relative;
-  flex-basis: 100%;
-  margin: 20px;
   background-color: rgb(45, 45, 45);
   display: block;
   border-radius: 15px;
@@ -108,18 +105,6 @@ p {
   font-family: Verdana, sans-serif;
   font-size: 13px;
   line-height: 150%;
-}
-
-.planet-details {
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
-
-  width: 55%;
-  height: 100%;
-
-  right: 0;
-  top: 0;
 }
 
 .previous-button {
